// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`runtime + batch tracking create a new batch 1`] = `
{
  "createInstance": {
    "__typename": "CreateInstancePayload",
    "edge": {
      "__typename": "EntityInstanceEdge",
      "node": {
        "__typename": "EntityInstance",
        "asTask": {
          "__typename": "Task",
          "name": {
            "__typename": "DisplayName",
            "value": "Batch",
          },
          "parent": {
            "__typename": "Location",
            "name": {
              "__typename": "Name",
              "value": "Frozen Tendy Factory",
            },
          },
          "state": {
            "__typename": "Open",
          },
        },
      },
    },
  },
}
`;

exports[`runtime + batch tracking still no batches via the canonical entrypoint query 1`] = `
{
  "trackables": {
    "__typename": "TrackableConnection",
    "edges": [
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Mixing Line",
          },
          "timeZone": "utc",
          "tracking": {
            "edges": [],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Fill Line",
          },
          "timeZone": "utc",
          "tracking": {
            "edges": [],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Assembly Line",
          },
          "timeZone": "utc",
          "tracking": {
            "edges": [],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Cartoning Line",
          },
          "timeZone": "utc",
          "tracking": {
            "edges": [],
          },
        },
      },
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Location",
          "name": {
            "__typename": "Name",
            "value": "Packaging Line",
          },
          "timeZone": "utc",
          "tracking": {
            "edges": [],
          },
        },
      },
    ],
    "totalCount": 5,
  },
}
`;

exports[`runtime + batch tracking but it shows up via the batch entrypoint query 1`] = `
{
  "trackables": {
    "__typename": "TrackableConnection",
    "edges": [
      {
        "__typename": "TrackableEdge",
        "node": {
          "__typename": "Task",
          "fields": {
            "__typename": "FieldConnection",
            "edges": [
              {
                "__typename": "FieldEdge",
                "node": {
                  "__typename": "Field",
                  "name": {
                    "__typename": "DisplayName",
                    "value": "Customer",
                  },
                },
              },
              {
                "__typename": "FieldEdge",
                "node": {
                  "__typename": "Field",
                  "name": {
                    "__typename": "DisplayName",
                    "value": "Product Name",
                  },
                },
              },
              {
                "__typename": "FieldEdge",
                "node": {
                  "__typename": "Field",
                  "name": {
                    "__typename": "DisplayName",
                    "value": "SKU",
                  },
                },
              },
            ],
          },
          "fsm": {
            "__typename": "TaskStateMachine",
            "active": {
              "__typename": "Task",
              "parent": {
                "__typename": "Location",
                "name": {
                  "__typename": "Name",
                  "value": "Frozen Tendy Factory",
                },
              },
            },
            "transitions": {
              "__typename": "TaskTransitions",
              "edges": [],
            },
          },
          "name": {
            "__typename": "DisplayName",
            "value": "Batch",
          },
        },
      },
    ],
  },
}
`;

exports[`runtime + batch tracking start run @ mixing line 1`] = `
{
  "assignees": {
    "edges": [
      {
        "node": {
          "assignedTo": {
            "displayName": "Jerry Garcia",
          },
        },
      },
    ],
  },
  "description": null,
  "fields": {
    "edges": [
      {
        "node": {
          "description": null,
          "name": {
            "value": "Override Start Time",
          },
          "value": {
            "__typename": "TimestampValue",
            "timestamp": null,
          },
          "valueType": "timestamp",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Override End Time",
          },
          "value": {
            "__typename": "TimestampValue",
            "timestamp": null,
          },
          "valueType": "timestamp",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Run Output",
          },
          "value": {
            "__typename": "NumberValue",
          },
          "valueType": "number",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Reject Count",
          },
          "value": {
            "__typename": "NumberValue",
          },
          "valueType": "number",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Comments",
          },
          "value": {
            "__typename": "StringValue",
            "string": null,
          },
          "valueType": "string",
        },
      },
    ],
  },
  "name": {
    "value": "Run",
  },
  "parent": {
    "name": {
      "value": "Mixing Line",
    },
  },
  "state": {
    "__typename": "InProgress",
    "inProgressBy": {
      "displayName": "Jerry Garcia",
    },
  },
}
`;

exports[`runtime + batch tracking end run @ mixing line 1`] = `
{
  "assignees": {
    "edges": [
      {
        "node": {
          "assignedTo": null,
        },
      },
    ],
  },
  "description": null,
  "fields": {
    "edges": [
      {
        "node": {
          "description": null,
          "name": {
            "value": "Override Start Time",
          },
          "value": {
            "__typename": "TimestampValue",
            "timestamp": null,
          },
          "valueType": "timestamp",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Override End Time",
          },
          "value": {
            "__typename": "TimestampValue",
            "timestamp": null,
          },
          "valueType": "timestamp",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Run Output",
          },
          "value": {
            "__typename": "NumberValue",
          },
          "valueType": "number",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Reject Count",
          },
          "value": {
            "__typename": "NumberValue",
          },
          "valueType": "number",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Comments",
          },
          "value": {
            "__typename": "StringValue",
            "string": null,
          },
          "valueType": "string",
        },
      },
    ],
  },
  "name": {
    "value": "Run",
  },
  "parent": {
    "name": {
      "value": "Fill Line",
    },
  },
  "state": {
    "__typename": "Open",
  },
}
`;

exports[`runtime + batch tracking end run @ mixing line 2`] = `
{
  "__typename": "TaskConnection",
  "edges": [
    {
      "__typename": "TaskEdge",
      "node": {
        "__typename": "Task",
        "name": {
          "__typename": "DisplayName",
          "value": "Batch",
        },
        "state": {
          "__typename": "InProgress",
        },
      },
    },
    {
      "__typename": "TaskEdge",
      "node": {
        "__typename": "Task",
        "name": {
          "__typename": "DisplayName",
          "value": "Run",
        },
        "state": {
          "__typename": "Closed",
        },
      },
    },
    {
      "__typename": "TaskEdge",
      "node": {
        "__typename": "Task",
        "name": {
          "__typename": "DisplayName",
          "value": "Run",
        },
        "state": {
          "__typename": "Open",
        },
      },
    },
  ],
}
`;

exports[`runtime + batch tracking start run @ fill line 1`] = `
{
  "assignees": {
    "edges": [
      {
        "node": {
          "assignedTo": {
            "displayName": "Jerry Garcia",
          },
        },
      },
    ],
  },
  "description": null,
  "fields": {
    "edges": [
      {
        "node": {
          "description": null,
          "name": {
            "value": "Override Start Time",
          },
          "value": {
            "__typename": "TimestampValue",
            "timestamp": null,
          },
          "valueType": "timestamp",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Override End Time",
          },
          "value": {
            "__typename": "TimestampValue",
            "timestamp": null,
          },
          "valueType": "timestamp",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Run Output",
          },
          "value": {
            "__typename": "NumberValue",
          },
          "valueType": "number",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Reject Count",
          },
          "value": {
            "__typename": "NumberValue",
          },
          "valueType": "number",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Comments",
          },
          "value": {
            "__typename": "StringValue",
            "string": null,
          },
          "valueType": "string",
        },
      },
    ],
  },
  "name": {
    "value": "Run",
  },
  "parent": {
    "name": {
      "value": "Fill Line",
    },
  },
  "state": {
    "__typename": "InProgress",
    "inProgressBy": {
      "displayName": "Jerry Garcia",
    },
  },
}
`;

exports[`runtime + batch tracking end run @ fill line 1`] = `
{
  "assignees": {
    "edges": [
      {
        "node": {
          "assignedTo": null,
        },
      },
    ],
  },
  "description": null,
  "fields": {
    "edges": [
      {
        "node": {
          "description": null,
          "name": {
            "value": "Override Start Time",
          },
          "value": {
            "__typename": "TimestampValue",
            "timestamp": null,
          },
          "valueType": "timestamp",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Override End Time",
          },
          "value": {
            "__typename": "TimestampValue",
            "timestamp": null,
          },
          "valueType": "timestamp",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Run Output",
          },
          "value": {
            "__typename": "NumberValue",
          },
          "valueType": "number",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Reject Count",
          },
          "value": {
            "__typename": "NumberValue",
          },
          "valueType": "number",
        },
      },
      {
        "node": {
          "description": null,
          "name": {
            "value": "Comments",
          },
          "value": {
            "__typename": "StringValue",
            "string": null,
          },
          "valueType": "string",
        },
      },
    ],
  },
  "name": {
    "value": "Run",
  },
  "parent": {
    "name": {
      "value": "Assembly Line",
    },
  },
  "state": {
    "__typename": "Open",
  },
}
`;

exports[`runtime + batch tracking end run @ fill line 2`] = `
{
  "__typename": "TaskConnection",
  "edges": [
    {
      "__typename": "TaskEdge",
      "node": {
        "__typename": "Task",
        "name": {
          "__typename": "DisplayName",
          "value": "Batch",
        },
        "state": {
          "__typename": "InProgress",
        },
      },
    },
    {
      "__typename": "TaskEdge",
      "node": {
        "__typename": "Task",
        "name": {
          "__typename": "DisplayName",
          "value": "Run",
        },
        "state": {
          "__typename": "Closed",
        },
      },
    },
    {
      "__typename": "TaskEdge",
      "node": {
        "__typename": "Task",
        "name": {
          "__typename": "DisplayName",
          "value": "Run",
        },
        "state": {
          "__typename": "Closed",
        },
      },
    },
    {
      "__typename": "TaskEdge",
      "node": {
        "__typename": "Task",
        "name": {
          "__typename": "DisplayName",
          "value": "Run",
        },
        "state": {
          "__typename": "Open",
        },
      },
    },
  ],
}
`;

exports[`runtime + batch tracking close out the batch 1`] = `
{
  "advance": {
    "__typename": "AdvanceTaskStateMachineResult",
    "diagnostics": null,
    "instantiations": [],
    "root": {
      "__typename": "Task",
      "fsm": {
        "__typename": "TaskStateMachine",
        "active": {
          "assignees": {
            "edges": [
              {
                "node": {
                  "assignedTo": null,
                },
              },
            ],
          },
          "description": null,
          "fields": {
            "edges": [
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override Start Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Override End Time",
                  },
                  "value": {
                    "__typename": "TimestampValue",
                    "timestamp": null,
                  },
                  "valueType": "timestamp",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Run Output",
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Reject Count",
                  },
                  "value": {
                    "__typename": "NumberValue",
                  },
                  "valueType": "number",
                },
              },
              {
                "node": {
                  "description": null,
                  "name": {
                    "value": "Comments",
                  },
                  "value": {
                    "__typename": "StringValue",
                    "string": null,
                  },
                  "valueType": "string",
                },
              },
            ],
          },
          "name": {
            "value": "Run",
          },
          "parent": {
            "name": {
              "value": "Assembly Line",
            },
          },
          "state": {
            "__typename": "Open",
          },
        },
        "transitions": {
          "edges": [],
        },
      },
      "state": {
        "__typename": "Closed",
      },
    },
  },
}
`;
